--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun run index.ts"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "concurrently": "^9.2.1"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
-  "workspaces":["packages/*"]
-    
-  
+  "workspaces": ["packages/*"]
 }
